# SpiderManager-SDK

./: .gitignore  LICENSE  README.md  pyproject.toml  test_robustness.py  test_transport.py
.github/workflows/: publish.yml
src/spidermanager_sdk/: __init__.py  _version.py  aio.py  buffer.py  client.py  transport.py  utils.py
