[build-system]
requires = ["setuptools>=68.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spidermanager-sdk"
dynamic = ["version"]
description = "极简 Python SDK，将爬虫采集数据通过 HTTP 异步中转至 SpiderManager 后端"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SpiderManager Team"},
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/spidermanager_sdk/_version.py"
# 强制不显示 +xxx 这种本地版本后缀，确保符合 PyPI 标准
local_scheme = "no-local-version"
